# Kiratu

./: CMakeLists.txt  Kiratu.cpp  LICENSE  README.md
KiratuBasic/: AudioBlocks.cpp  AudioBlocks.h  AudioBlocks.hpp  AudioBlocksActions.cpp  AudioEffector.cpp  AudioEffector.h  AudioEffector.hpp  AudioMixer.cpp  AudioMixer.h  AudioMixer.hpp
KiratuBasic/Core/: AudioProcesser.cpp  CoreEngine.cpp
KiratuIO/: LogSystem.cpp  LogSystem.hpp  TerminalConsole.cpp  TerminalConsole.h  TerminalConsole.hpp
KiratuPlugin/: Plugin.cpp  Plugin.h  Plugin.hpp
lib/KiratuBasic/Core/: AudioBlocks.hpp  AudioBlocksActions.hpp
lib/KiratuIO/: LogSystem.hpp
src/: KiratuMain.cpp
src/KiratuBasic/: AudioBlocks.cpp  AudioBlocksActions.cpp  AudioEffector.cpp  AudioMixer.cpp
src/KiratuBasic/Core/: AudioProcesser.hpp  CoreEngine.cpp  CoreEngine.hpp
src/KiratuIO/: LogSystem.cpp  SystemInit.cpp  TerminalConsole.cpp
